--- a/Team-Members/Stephane/pricing.html
+++ b/Team-Members/Stephane/pricing.html
@@ -43,41 +43,46 @@
 </head>
 
 <body>
-            <!-- Navigation Bar -->
+    <!-- Navigation Bar -->
     <nav>
-        <h2> <img src="./img/logos/projematic logo wide1.png" width="200"></img></h2>
-        <ul>
-            <li>
-                <a href="./index.html">
-                    <h2>Home</h2>
-                </a>
-            </li>
-            <li>
-                <a href="./about-us.html">
-                    <h2>About Us</h2>
-                </a>
-            </li>
-            <li>
-                <a href="./documentation.html">
-                    <h2>Documentation</h2>
-                </a>
-            </li>
-            <li>
-                <a href="./pricing.html">
-                    <h2>Pricing</h2>
-                </a>
-            </li>
-            <li>
-                <a href="./sign-in.html">
-                    <h2>Sign-In</h2>
-                </a>
-            </li>
-        </ul>
-        <button class="menu-button">
-            &#9776;
-            <!-- Hamburger character (3 lines.) -->
-        </button>
-    </nav>
+        <h2><img src="./img/logos/projematic logo wide1.png" width="200"></img></h2>
+            <ul>
+                <li>
+                    <a href="./index.html">
+                        <h2>Home</h2>
+                    </a>
+                </li>
+                <li>
+                    <a href="./about-us.html">
+                        <h2>About Us</h2>
+                    </a>
+                </li>
+                <li>
+                    <a href="../Marat/flowchart.html">
+                        <h2>Documentation</h2>
+                    </a>
+                </li>
+                <li>
+                    <a href="./pricing.html">
+                        <h2>Pricing</h2>
+                    </a>
+                </li>
+                <li>
+                    <a href="../Toyin/Sign-up.html">
+                        <h2>Register</h2>
+                    </a>
+                </li>
+                <li>
+                    <a href="../Toyin/sign-in.html">
+                        <h2>Login</h2>
+                    </a>
+                </li>
+            </ul>
+            <button class="menu-button">
+                &#9776;
+                <!-- Hamburger character (3 lines.) -->
+            </button>
+        </nav>
 
     <section class="title">
         <br>
