--- a/Team-Members/Stephane/sign-in.html
+++ b/Team-Members/Stephane/sign-in.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" type="text/css" href="./css/social-media-toolbar.css">
     <link rel="stylesheet" type="text/css" href="./css/text-formating.css">
     <link rel="stylesheet" type="text/css" href="./css/nav-bar.css">
-    <link rel="stylesheet" type="text/css" href="./css/button.css">
+    <link rel="stylesheet" type="text/css" href="../Stephane/css/">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
 
     <!-- JavaScript file(s): -->
