--- a/index.html
+++ b/index.html
@@ -23,30 +23,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Vendor CSS Styles -->
-    <link rel="stylesheet" href="./vendor/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./Team-Members/Stephane/vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <!-- Vendor JS Scripts -->
-    <script type="text/javascript" src="./vendor/js/jquery.js"></script>
-    <script type="text/javascript" src="./vendor/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./Team-Members/Stephane/vendor/jquery.js"></script>
+    <script type="text/javascript" src="./Team-Members/Stephane/vendor/js/bootstrap.min.js"></script>
 
     <!-- Stylesheet(s): -->
 
-    <link rel="stylesheet" type="text/css" href="./css/social-media-toolbar.css">
-    <link rel="stylesheet" type="text/css" href="./css/text-formating.css">
-    <link rel="stylesheet" type="text/css" href="./css/nav-bar.css">
-    <link rel="stylesheet" type="text/css" href="./css/button.css">
-    <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="./Team-Members/Stephane/css/social-media-toolbar.css">
+    <link rel="stylesheet" type="text/css" href="./Team-Members/Stephane/css/text-formating.css">
+    <link rel="stylesheet" type="text/css" href="./Team-Members/Stephane/css/nav-bar.css">
+    <link rel="stylesheet" type="text/css" href="./Team-Members/Stephane/css/button.css">
+    <link rel="stylesheet" type="text/css" href="./Team-Members/Stephane/css/main.css">
 
     <!-- JavaScript file(s): -->
-    <script type="text/javascript" src="./js/scripts.js" defer></script>
+    <script type="text/javascript" src="./Team-Members/Stephane/js/scripts.js" defer></script>
 </head>
 
 <body>
             <!-- Navigation Bar -->
     <nav>
-       <h2><img src="./img/logos/projematic logo wide1.png" width="200"></img></h2>
+       <h2><img src="./Team-Members/Stephane/img/logos/projematic logo wide1.png" width="200"></img></h2>
         <ul>
             <li>
                 <a href="./index.html">
@@ -59,7 +59,7 @@
                 </a>
             </li>
             <li>
-                <a href="./documentation.html">
+                <a href="../Marat/flowchart.html">
                     <h2>Documentation</h2>
                 </a>
             </li>
@@ -69,8 +69,13 @@
                 </a>
             </li>
             <li>
-                <a href="./sign-in.html">
-                    <h2>Sign-In</h2>
+                <a href="../Toyin/Sign-up.html">
+                    <h2>Register</h2>
+                </a>
+            </li>
+            <li>
+                <a href="../Toyin/sign-in.html">
+                    <h2>Login</h2>
                 </a>
             </li>
         </ul>
@@ -137,7 +142,7 @@
     </section>
     <section class="footer">
         <br>
-       <h3><img src="./img/logos/projematic logo wide1.png" width="200"></img></h3>
+       <h3><img src="./Team-Members/Stephane/img/logos/projematic logo wide1.png" width="200"></img></h3>
         <a href="http://www.linkedin.com/" target="_blank">
             <i class="fa fa-linkedin">
                 <span class="screen-reader-text"></i></span></a>
