--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
                 </a>
             </li>
             <li>
-                <a href="../Marat/flowchart.html">
+                <a href="./Team-Members/Marat/flowchart.html">
                     <h2>Documentation</h2>
                 </a>
             </li>
             <li>
-                <a href="./pricing.html">
+                <a href="./Team-Members/Toyin/Pricing.html">
                     <h2>Pricing</h2>
                 </a>
             </li>
             <li>
-                <a href="../Toyin/Sign-up.html">
+                <a href="./Team-Members/Toyin/Sign-up.html">
                     <h2>Register</h2>
                 </a>
             </li>
             <li>
-                <a href="../Toyin/sign-in.html">
+                <a href="./Team-Members/Toyin/sign-in.html">
                     <h2>Login</h2>
                 </a>
             </li>
