--- a/about-us.html
+++ b/about-us.html
@@ -23,62 +23,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Vendor CSS Styles -->
-    <link rel="stylesheet" href="./vendor/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./Team-Members/Stephane/vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <!-- Vendor JS Scripts -->
-    <script type="text/javascript" src="./vendor/js/jquery.js"></script>
-    <script type="text/javascript" src="./vendor/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./Team-Members/Stephane/vendor/jquery.js"></script>
+    <script type="text/javascript" src="./Team-Members/Stephane/vendor/js/bootstrap.min.js"></script>
 
     <!-- Stylesheet(s): -->
 
-    <link rel="stylesheet" type="text/css" href="./css/social-media-toolbar.css">
-    <link rel="stylesheet" type="text/css" href="./css/text-formating.css">
-    <link rel="stylesheet" type="text/css" href="./css/nav-bar.css">
-    <link rel="stylesheet" type="text/css" href="./css/button.css">
-    <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="./Team-Members/Stephane/css/social-media-toolbar.css">
+    <link rel="stylesheet" type="text/css" href="./Team-Members/Stephane/css/text-formating.css">
+    <link rel="stylesheet" type="text/css" href="./Team-Members/Stephane/css/nav-bar.css">
+    <link rel="stylesheet" type="text/css" href="./Team-Members/Stephane/css/button.css">
+    <link rel="stylesheet" type="text/css" href="./Team-Members/Stephane/css/main.css">
 
     <!-- JavaScript file(s): -->
-    <script type="text/javascript" src="./js/scripts.js" defer></script>
+    <script type="text/javascript" src="./Team-Members/Stephane/js/scripts.js" defer></script>
 </head>
 
 <body>
             <!-- Navigation Bar -->
-    <nav>
-        <h2> <img src="./img/logos/projematic logo wide1.png" width="200"></img></h2>
-        <ul>
-            <li>
-                <a href="./index.html">
-                    <h2>Home</h2>
-                </a>
-            </li>
-            <li>
-                <a href="./about-us.html">
-                    <h2>About Us</h2>
-                </a>
-            </li>
-            <li>
-                <a href="./documentation.html">
-                    <h2>Documentation</h2>
-                </a>
-            </li>
-            <li>
-                <a href="./pricing.html">
-                    <h2>Pricing</h2>
-                </a>
-            </li>
-            <li>
-                <a href="./sign-in.html">
-                    <h2>Sign-In</h2>
-                </a>
-            </li>
-        </ul>
-        <button class="menu-button">
-            &#9776;
-            <!-- Hamburger character (3 lines.) -->
-        </button>
-    </nav>
+            <nav>
+                <h2><img src="./Team-Members/Stephane/img/logos/projematic logo wide1.png" width="200"></img></h2>
+                 <ul>
+                     <li>
+                         <a href="./index.html">
+                             <h2>Home</h2>
+                         </a>
+                     </li>
+                     <li>
+                         <a href="./about-us.html">
+                             <h2>About Us</h2>
+                         </a>
+                     </li>
+                     <li>
+                         <a href="./Team-Members/Marat/flowchart.html">
+                             <h2>Documentation</h2>
+                         </a>
+                     </li>
+                     <li>
+                         <a href="./Team-Members/Toyin/Pricing.html">
+                             <h2>Pricing</h2>
+                         </a>
+                     </li>
+                     <li>
+                         <a href="./Team-Members/Toyin/Sign-up.html">
+                             <h2>Register</h2>
+                         </a>
+                     </li>
+                     <li>
+                         <a href="./Team-Members/Toyin/sign-in.html">
+                             <h2>Login</h2>
+                         </a>
+                     </li>
+                 </ul>
+                 <button class="menu-button">
+                     &#9776;
+                     <!-- Hamburger character (3 lines.) -->
+                 </button>
+             </nav>
 
     <section class="title">
         <br>
@@ -138,7 +143,7 @@
 
         <section class="footer">
             <br>
-            <h3><img src="./img/logos/projematic logo wide1.png" width="200"></img></h3>
+            <h3><img src="./Team-Members/Stephane/img/logos/projematic logo wide1.png" width="200"></img></h3>
             <a href="http://www.linkedin.com/" target="_blank">
                 <i class="fa fa-linkedin">
                     <span class="screen-reader-text"></i></span></a>
