--- a/about-us.html
+++ b/about-us.html
@@ -10,7 +10,7 @@
 
     <!-- Mobile Icon & Tab Color: -->
     <meta name="theme-color" content="#003399">
-    <link rel="icon" sizes="192x192" href="./img/logos/icon2.png">
+    <link rel="icon" sizes="192x192" href="./Team-Members/Stephane/img/logos/icon2.png">
 
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="##003399">
